--- a/style.css
+++ b/style.css
@@ -410,7 +410,14 @@ a:hover {
 .guests-input-search,
 .check-in-input-search-rooms,
 .check-out-input-search-rooms,
-.guests-input-search-rooms {
+.guests-input-search-rooms,
+.checkout-input,
+.phone-number-input,
+.name-on-card-input,
+.debit-card-input,
+.security-code-input,
+.zip-code-input,
+.coupon-input {
   position: relative;
   padding: 13px 14px 14px 14px;
   align-items: center;
@@ -428,7 +435,9 @@ a:hover {
 input:focus {
   outline-color: var(--mainColor);
 }
-
+.name-on-card-input {
+  width: 500px;
+}
 .location-input-search {
   padding: 11px 12px 12px 12px;
   align-items: center;
@@ -444,13 +453,18 @@ input:focus {
   width: 210px;
 }
 
-.covid-restrictions-warning {
+.covid-restrictions-warning,
+.covid-restrictions-warning-checkout {
   position: relative;
   height: 72px;
   border-radius: 8px;
   background: #fcefca;
   margin-top: 50px;
   margin-bottom: 50px;
+}
+.covid-restrictions-warning-checkout {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .warning-covid-icon {
@@ -1382,8 +1396,6 @@ a {
 .dropdown-sortby {
   position: relative;
   display: flex;
-  width: 190px;
-  padding-left: 12px;
   padding-top: 18px;
   padding-bottom: 18px;
   align-items: center;
@@ -1392,14 +1404,31 @@ a {
   background: #fff;
   appearance: none;
 }
+
+.dropdown-sortby {
+  padding-left: 12px;
+}
+
+.dropdown-sortby {
+  width: 190px;
+}
+
 .sort-by-dropdown::before {
   content: "";
-  border-width: 10px;
-  border-style: solid;
-  border-color: transparent transparent red transparent;
   position: absolute;
-  right: 5px;
-  top: -20px;
+  z-index: 1;
+  background-color: transparent;
+  border: 4px solid transparent;
+  border-radius: 4px;
+  border-color: #4f4f4f;
+  width: 12px;
+  height: 12px;
+  border-width: 0px 4px 4px 0;
+  transform: rotate(45deg);
+}
+.sort-by-dropdown::before {
+  right: 9px;
+  top: 15px;
 }
 
 .sort-by-div {
@@ -1443,8 +1472,8 @@ a {
 }
 
 .five-stars {
-  display: flex;
   position: absolute;
+  display: flex;
   left: 327px;
   top: 63px;
 }
@@ -1588,6 +1617,10 @@ a {
 /*  */
 /*  */
 /*  */
+.body-for-place-detailes-page,
+.body-for-checkout {
+  background-color: #f4f4f4;
+}
 
 .nav-links-loged-in a {
   color: var(--textColor);
@@ -1626,15 +1659,17 @@ a {
   width: 400px;
 }
 
-.main-container-place-details {
+.main-container-place-details,
+.main-container-checkout {
   margin-right: auto;
   margin-left: auto;
   padding-left: 20px;
   padding-right: 20px;
-  width: calc(100% - 250px);
+  width: calc(100% - 235px);
 }
 
-.filter-place {
+.filter-place,
+.filter-payment-optioins {
   height: 48px;
   background: #fff;
   box-shadow: 0px 1px 0px 0px #e0e0e0;
@@ -1648,8 +1683,8 @@ a {
   gap: 10px;
   color: #333;
 }
-.body-for-place-detailes-page {
-  background-color: #f4f4f4;
+.filter-payment-optioins {
+  padding-left: 46px;
 }
 
 .place-title-heading {
@@ -1776,7 +1811,7 @@ a {
   margin-top: 40px;
   margin-bottom: 24px;
 }
-.promo-rooms-section{
+.promo-rooms-section {
   display: flex;
   justify-content: space-between;
   margin-top: 16px;
@@ -1868,4 +1903,496 @@ a {
   background: var(--Blue-1, #2f80ed);
   border: none;
   color: white;
+}
+
+/*  */
+/*  */
+/*  */
+/* start of checkout page */
+/*  */
+/*  */
+/*  */
+.main-container-checkout h1 {
+  color: #1a1a1a;
+  font-size: 32px;
+  font-weight: 700;
+  margin-top: 60px;
+}
+.room-personal-info,
+.payment-options-box {
+  position: relative;
+  width: 810px;
+  height: 328px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  background: #fff;
+  margin-bottom: 50px;
+}
+.payment-options-box {
+  height: 576px;
+}
+.room-info,
+.payment-info {
+  width: 810px;
+  height: 60px;
+  flex-shrink: 0;
+  border-radius: 6px 6px 0px 0px;
+  background: var(--Blue-1, #2f80ed);
+}
+.room-info h3,
+.payment-info h3 {
+  position: absolute;
+  top: 16px;
+  left: 64px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.room-info p {
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  position: absolute;
+  top: 16px;
+}
+.room-info p {
+  left: 141px;
+}
+
+.payment-options-box h3 {
+  left: 64px;
+  top: 16px;
+}
+.room-info svg,
+.payment-info svg {
+  position: absolute;
+  left: 20px;
+  top: 14px;
+}
+
+.label-first-checkout,
+.label-last-checkout,
+.label-countries-code,
+.label-debit-card,
+.label-security-code,
+.label-zip-code,
+.label-coupon {
+  position: absolute;
+  color: #181818;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 19.6px */
+}
+.label-countries-code {
+  position: absolute;
+  top: 182px;
+  left: 32px;
+}
+
+.label-first-checkout {
+  top: 92px;
+  left: 32px;
+}
+.label-last-checkout {
+  top: 92px;
+  left: 250px;
+}
+.dropdown-countries-code {
+  position: relative;
+  margin-top: 142px;
+  margin-left: 32px;
+  display: flex;
+  width: 150px;
+  height: 46px;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: var(--Gray-6, #f2f2f2);
+}
+
+.country-code,
+.country-code-op1,
+.country-code-op2,
+.country-code-op3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+}
+.country-code {
+  top: 50%;
+  transform: translate(0, -50%);
+  left: 12px;
+}
+
+.country-code-op1 {
+  top: 50px;
+}
+.country-code-op2 {
+  top: 95px;
+}
+.country-code-op3 {
+  top: 145px;
+}
+.country-code-op3 img {
+  padding: 0;
+  margin-bottom: -9px;
+}
+.country-code-op1,
+.country-code-op2,
+.country-code-op3 {
+  left: 12px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  text-decoration: none;
+  color: #706b6b;
+  transition: 0.3s;
+}
+.country-code-op1:hover,
+.country-code-op2:hover,
+.country-code-op3:hover {
+  padding-left: 14px;
+  cursor: pointer;
+}
+.options-country-code {
+  margin-top: 220px;
+  width: 150px;
+  height: 150px;
+  border-radius: 4px;
+  background: white;
+  border-style: solid;
+  border-color: var(--mainColor);
+  border-width: 1px;
+  transition: 0.3s;
+  display: none;
+  z-index: 1;
+}
+
+.dropdown-countries-code::before {
+  content: "";
+  border-width: 6px;
+  border-style: solid;
+  border-color: #4f4f4f transparent transparent transparent;
+  position: absolute;
+  transform: translate(0, -50%);
+  right: 22px;
+  top: 54%;
+  z-index: 1;
+}
+.show-dropdown-countries {
+  display: block;
+}
+.phone-number-input {
+  width: 250px;
+  position: absolute;
+  bottom: 80px;
+  left: 194px;
+}
+.alert-checkbox {
+  width: 20px;
+  height: 20px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  border: 1px solid var(--Gray-4, #bdbdbd);
+  background: #fff;
+}
+.alert-text {
+  display: inline-block;
+}
+.flex-alert,
+.visa-icons-boxes {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.flex-alert {
+  left: 32px;
+  top: 268px;
+}
+
+.filter-payment-optioins {
+  width: 810px;
+  height: 48px;
+  flex-shrink: 0;
+  background: #fff;
+  box-shadow: 0px 1px 0px 0px #e0e0e0;
+}
+.visa-icon-box {
+  width: 60px;
+  height: 40px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: var(--Gray-6, #f2f2f2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.visa-icons-boxes {
+  left: 32px;
+  top: 140px;
+}
+.form-payment {
+  position: absolute;
+  top: 30px;
+}
+.label-debit-card {
+  top: 270px;
+  left: 32px;
+}
+.expiration-date .dropdown-countries-code {
+  padding-left: 16px;
+}
+.expiration-date {
+  position: absolute;
+  top: 220px;
+  display: flex;
+  justify-content: space-between;
+}
+.security-zip-code {
+  position: absolute;
+  display: flex;
+  top: 435px;
+  left: 32px;
+}
+.label-zip-code {
+  left: 220px;
+}
+
+.yellow-information {
+  position: relative;
+  margin-top: 30px;
+  width: 810px;
+  height: 423px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  background: #fff;
+  margin-bottom: 140px;
+}
+.yellow-information-heading {
+  position: absolute;
+  top: 0;
+  width: 810px;
+  height: 60px;
+  flex-shrink: 0;
+  border-radius: 6px 6px 0px 0px;
+  background: var(--Yellow, #f2c94c);
+  padding-top: 18px;
+  padding-left: 24px;
+}
+.yellow-information-heading p {
+  font-weight: 600;
+}
+.yellow-information ul {
+  position: absolute;
+  top: 86px;
+  left: 45px;
+  line-height: 170%;
+}
+.yellow-information li {
+  list-style-type: decimal;
+  width: 750px;
+  color: #333;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 0.3px;
+}
+.warning-yello-box {
+  position: absolute;
+  left: 32px;
+  top: 245px;
+}
+
+.yellow-information button {
+  display: inline-flex;
+  padding: 12px 18px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: var(--mainColor);
+  border: none;
+  color: white;
+  position: absolute;
+  left: 32px;
+  top: 320px;
+}
+
+.secure-text-icon {
+  position: absolute;
+  top: 380px;
+  left: 32px;
+  display: flex;
+}
+
+.aside-checkout-hotel-card {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  background: #fff;
+  margin-bottom: 30px;
+}
+.aside-checkout-hotel-card img {
+  position: absolute;
+  width: 400px;
+  height: 180px;
+  flex-shrink: 0;
+}
+.aside-checkout-hotel-card h2 {
+  position: absolute;
+  color: #181818;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  top: 200px;
+  left: 24px;
+}
+.five-stars-checkout {
+  position: absolute;
+  display: flex;
+  top: 231px;
+  left: 20px;
+}
+.red-text-card {
+  position: absolute;
+  color: var(--Red, #eb5757);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  top: 276px;
+  left: 24px;
+}
+.check-in-card-checkout {
+  position: absolute;
+  top: 304px;
+  left: 24px;
+  color: #4f4f4f;
+}
+.check-out-card-checkout {
+  position: absolute;
+  top: 332px;
+  left: 24px;
+  color: #4f4f4f;
+}
+.nights-staying-card-checkout {
+  position: absolute;
+  top: 360px;
+  left: 24px;
+  color: #4f4f4f;
+}
+
+.price-details-aside-checkout {
+  position: relative;
+  width: 400px;
+  height: 338px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  border: 1px solid var(--Gray-5, #e0e0e0);
+  background: #fff;
+}
+.price-details-aside-checkout-heading {
+  position: absolute;
+  display: flex;
+  width: 400px;
+  padding: 18px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 6px 6px 0px 0px;
+  background: #85e0ab;
+}
+.price-details-aside-checkout-heading h2 {
+  font-weight: 700;
+  font-size: 16px;
+}
+.no-rooms-price-details {
+  position: absolute;
+  top: 78px;
+  left: 18px;
+  color: #4f4f4f;
+  font-size: 14px;
+}
+
+.tax-price-details {
+  position: absolute;
+  top: 110px;
+  left: 18px;
+  color: #4f4f4f;
+  font-size: 14px;
+}
+.tax-price {
+  position: absolute;
+  top: 110px;
+  right: 18px;
+}
+.no-rooms-price {
+  position: absolute;
+  top: 78px;
+  right: 18px;
+  color: #4f4f4f;
+  font-size: 14px;
+}
+.line-price-deatils-checkout {
+  position: absolute;
+  top: 150px;
+  width: 100%;
+  height: 1px;
+  background-color: #e0e0e0;
+}
+.total-price-details {
+  position: absolute;
+  left: 18px;
+  top: 175px;
+  color: #181818;
+  font-size: 16px;
+  font-weight: 600;
+}
+.price-price-details {
+  position: absolute;
+  top: 175px;
+  right: 18px;
+  color: #333;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.2px;
+}
+.promo-cpde-price-details {
+  position: absolute;
+  top: 204px;
+  left: 18px;
+  color: var(--mainColor);
+}
+.coupon-apply {
+  position: absolute;
+  top: 246px;
+  left: 18px;
+}
+
+.coupon-apply button {
+  position: absolute;
+  display: flex;
+  padding: 14px 18px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 6px;
+  background: #333;
+  border: none;
+  color: white;
+  top: 20px;
+  left: 245px;
+}
+
+.check-out-flex{
+  display: flex;
+  justify-content: space-between;
 }
